Fixed About Me title not visible on webkit browsers

--- a/src/CSS/about.css
+++ b/src/CSS/about.css
@@ -32,7 +32,6 @@
   background-size: 300%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
   margin: 40px;
   display: flex;
 }
